Fixed 'Group wall posts cut off mid word and return on the next line' (5929)

--- a/css/groups.less
+++ b/css/groups.less
@@ -222,6 +222,11 @@
 	.show-more-members {
 		text-align : center;
 	}
+
+	.wall-news {	
+		word-break : break-word;
+		text-align : justify;
+	}	
 }
 
 #group {
